--- a/proyecto/views/home.ejs
+++ b/proyecto/views/home.ejs
@@ -2,7 +2,7 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="home-style.css">
+    <link rel="stylesheet" href="css/home-style.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
@@ -14,37 +14,37 @@
     </div>
       <ul class="nav-links">
         <li>
-          <a href="/proyecto/home.html" class="active">
+          <a href="/" class="active">
             <i class='bx bxs-dashboard' ></i>
             <span class="links_name">Dashboard</span>
           </a>
         </li>
         <li>
-          <a href="/proyecto/errors.html">
+          <a href="/errors">
             <i class='bx bx-box' ></i>
             <span class="links_name">Errors</span>
           </a>
         </li>
         <li>
-          <a href="/proyecto/team.html">
+          <a href="/team">
             <i class='bx bx-user' ></i>
             <span class="links_name">Team</span>
           </a>
         </li>
         <li>
-          <a href="/proyecto/messages.html">
+          <a href="/messages">
             <i class='bx bx-message' ></i>
             <span class="links_name">Messages</span>
           </a>
         </li>
         <li>
-          <a href="/proyecto/settings.html">
+          <a href="/settings">
             <i class='bx bx-cog' ></i>
             <span class="links_name">Settings</span>
           </a>
         </li>
         <li class="log_out">
-          <a href="#">
+          <a href="/login">
             <i class='bx bx-log-out'></i>
             <span class="links_name">Log out</span>
           </a>
@@ -186,7 +186,7 @@
       </div>
     </div>
   </section>
-  <script src="homej.js"></script>
+  <script src="js/homej.js"></script>
 </body>
 </html>
 
