--- a/proyecto/views/errors.ejs
+++ b/proyecto/views/errors.ejs
@@ -2,7 +2,7 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/home-style.css">
+    <link rel="stylesheet" href="css/errors.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
@@ -68,7 +68,7 @@
     </nav>
 
   </section>
-  <script src="homej.js"></script>
+  <script src="js/errors.js"></script>
 </body>
 </html>
 
