--- a/proyecto/views/team.ejs
+++ b/proyecto/views/team.ejs
@@ -2,7 +2,7 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/home-style.css">
+    <link rel="stylesheet" href="css/team.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
@@ -90,8 +90,8 @@
                   <p class="blog-post-meta"><%= posts[i].post_date.toDateString()  %> by <a href="#"><%= posts[i].author  %></a>     </p>
                   <p><%= posts[i].post_data  %></p>-->
                   <h2 class="blog-post-title"><%= posts[i].title  %> </h2>
-                  <a class = "btn btn-danger" href ="/delete/<%= posts[i]._id  %>"> Delete </a>
-                  <a class = "btn btn-info" href ="/edit/<%= posts[i]._id  %>"> Edit </a>
+                  <span><a class = "btn btn-danger" href ="/delete/<%= posts[i]._id  %>"></a></span>
+                  <span><a class = "btn btn-info" href ="/edit/<%= posts[i]._id  %>"></a></span>
                 </div>
         
                 <% }}  %>
@@ -105,7 +105,7 @@
     </div>   
 
   </section>
-  <script src="homej.js"></script>
+  <script src="js/team.js"></script>
 </body>
 </html>
 
