login (autenticacion cuando entras a home)

--- a/proyecto/views/delete.ejs
+++ b/proyecto/views/delete.ejs
@@ -76,6 +76,7 @@
                 <input type="text" class="form-control" name="title" placeholder="title" value="<%= post.title %>" disabled>
               </div>
               <button type="submit" class="btn btn-primary">Delete Teammate</button>
+              <button type="submit" class="btn btn-primary">Cancel</button>
             </form>
           </div>
         </div>
