--- a/proyecto/views/team.ejs
+++ b/proyecto/views/team.ejs
@@ -81,7 +81,7 @@
               </a>
               <% if(posts.length == 0) { %>
 
-                <h2>There are no Posts</h2>
+                <h2>There are no team members</h2>
               <% } else { for(let i =0; i< posts.length;i++)  {    %>
                 
 
