--- a/proyecto/views/newTeammate.ejs
+++ b/proyecto/views/newTeammate.ejs
@@ -2,7 +2,7 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/home-style.css">
+    <link rel="stylesheet" href="css/addteammate.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
@@ -73,12 +73,12 @@
         <div class="form-group">
           <input type="text" class="form-control" name="title" placeholder="Name">
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <span><button type="" class="btn btn-primary">Submit</button></span>
       </form>
     </div>   
 
   </section>
-  <script src="homej.js"></script>
+  <script src="js/homej.js"></script>
 </body>
 </html>
 
