--- a/proyecto/views/login.ejs
+++ b/proyecto/views/login.ejs
@@ -12,8 +12,8 @@
   <div class="main">
     <p class="sign" align="center">Sign in</p>
     <form class="form1">
-      <input class="un " type="text" align="center" placeholder="Username">
-      <input class="pass" type="password" align="center" placeholder="Password">
+      <input class="un " type="email" align="center" name="email" placeholder="Email Address">
+      <input class="pass" type="password" align="center" name="password" placeholder="Password">
       <a class="submit" href="/" align="center">Sign in</a>
       <p class="forgot" align="center"><a href="#">Forgot Password?</p>
             
