--- a/proyecto/views/register.ejs
+++ b/proyecto/views/register.ejs
@@ -12,8 +12,9 @@
   <div class="main">
     <p class="sign" align="center">Sign in</p>
     <form class="form1" action="/addUser" method = "POST">
-      <input class="un " type="email" align="center" name="email" placeholder="Email Address">
-      <input class="pass" type="password" align="center" name="password" placeholder="Password">
+      <input type="email" name="email"id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+      <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
+
       <a class="submit" href="/" align="center">Start</a>
             
                 
