--- a/proyecto/views/newMessage.ejs
+++ b/proyecto/views/newMessage.ejs
@@ -69,7 +69,7 @@
 
     <div class="home-content">
         <h2> New Entrie</h2>
-        <form action="/newTeammate" method="POST">
+        <form action="/newMessage" method="POST">
           <div class="form-group">
             <input type="text" class="form-control" name="title" placeholder="from:">
           </div>
